[tool.poetry]
name = "coding_test"
version = "0.1.0"
description = ""
authors = ["kimdeokyoung <dudejrss@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.4"

[tool.black]
line-length = 100 
target-version = ['py38', 'py39']  
skip-string-normalization = true  

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
